--- a/gitea/home.tmpl
+++ b/gitea/home.tmpl
@@ -1,6 +1,6 @@
 {{template "base/head" .}}
 <div class="page-content home" >
-	<div style="background-image: url(http://gitea.tooling.test:3000/assets/bg.png) height: 100%; width: 100%;">
+	<div >
 		<div class="sixteen wide center aligned centered column">
 			<div>
 				<img class="logo" width="220" height="220" src="{{AssetUrlPrefix}}/img/logo.svg"/>
