--- a/gitea/home.tmpl
+++ b/gitea/home.tmpl
@@ -7,16 +7,11 @@
 			</div>
 			<div class="hero">
 				<h1 class="ui icon header title">
-					{{AppName}}
+					Our single source of truth
 				</h1>
 				<h2>{{.i18n.Tr "startpage.app_desc"}}</h2>
 			</div>
 		</div>
-	</div>
-	<div class="ui stackable middle very relaxed page grid">
-        <h1 class="hero ui icon header">
-            The CICD-toolbox uses Gitea as lightweight git service. You can use this service when logged in. Contact your manager to get access...
-        </h1>
 	</div>
 </div>
 {{template "base/footer" .}}
